--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "multivendor-api",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/nazmulhossain17/multi-vendor-ecommerce-api#readme",
+  "bugs": {
+    "url": "https://github.com/nazmulhossain17/multi-vendor-ecommerce-api/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nazmulhossain17/multi-vendor-ecommerce-api.git"
+  },
   "license": "ISC",
   "author": "Syed Nazmul Hossain",
   "type": "commonjs",
   "main": "index.js",
- {
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "lint": "eslint 'src/**/*.ts'"
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "http": "^0.0.1-security",
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
