--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.44.5",
     "http": "^0.0.1-security",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "ts-node-dev": "^2.0.0",
@@ -31,6 +33,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
